--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
      <Compile Include="Assets\Ball.cs" />
      <Compile Include="Assets\Player.cs" />
+     <Compile Include="Assets\Wall.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
