--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
      <Compile Include="Assets\Ball.cs" />
      <Compile Include="Assets\BallRelaunch.cs" />
+     <Compile Include="Assets\Brick.cs" />
      <Compile Include="Assets\BricksManager.cs" />
      <Compile Include="Assets\Player.cs" />
      <Compile Include="Assets\Wall.cs" />
