feat: game over

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -40,6 +40,7 @@
      <Compile Include="Assets\BallRelaunch.cs" />
      <Compile Include="Assets\Brick.cs" />
      <Compile Include="Assets\BricksManager.cs" />
+     <Compile Include="Assets\GameOver.cs" />
      <Compile Include="Assets\Player.cs" />
      <Compile Include="Assets\Scoring.cs" />
      <Compile Include="Assets\TitleMenu.cs" />
