fix: other hits

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -43,6 +43,8 @@
      <Compile Include="Assets\GameOver.cs" />
      <Compile Include="Assets\HitAudioManager.cs" />
      <Compile Include="Assets\IHitListener.cs" />
+     <Compile Include="Assets\ILifeZeroListener.cs" />
+     <Compile Include="Assets\ILoseLifeListener.cs" />
      <Compile Include="Assets\Player.cs" />
      <Compile Include="Assets\Scoring.cs" />
      <Compile Include="Assets\TitleMenu.cs" />
